[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "physis"
version = "0.3.0"
description = "A living agent that pulls the world and evolves itself"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["openai>=1.0", "ddgs>=9.0", "beautifulsoup4>=4.12", "rich>=13.0"]

[tool.setuptools]
packages = ["physis"]

[project.scripts]
physis = "physis:main"
physis-monitor = "physis.monitor:main"
